--- a/ui/src/containers/dumb/User/UserChatPage.css
+++ b/ui/src/containers/dumb/User/UserChatPage.css
@@ -31,7 +31,7 @@ html, #root, [data-reactroot], #whole-page {
     position: relative;
 }
 
-#message-window{
+#user-message-window{
     position: relative;
     float:right;
     width: 75%;
